--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     LinkedIn
   </a>
    •
-  <a class="social-link" href="https://github.com/kjcuk/About-Me-First-Website.git">
+  <a class="social-link" href="https://github.com/kjcuk/All-about-Me.git">
     Github
   </a>
   <br>
