--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-  <header
+  <header>
 <h1>Kennys Website</h1>
 
   </header>
@@ -22,8 +22,8 @@
 
 
 <footer class="site-footer">
-  <a class="social-link" href="https://www.facebook.com">
-    Facebook
+  <a class="social-link" target="_blank" href="https://www.facebook.com">
+    Facebook 
   </a>
    •
   <a class="social-link" href="https://twitter.com">
