Images and Title change

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-<title>Firt Website Trial</title>
+<title>About Ken</title>
 
 </head>
 
 <body>
 
   <header>
-<h1>Kennys Website</h1>
+<h1>Ken Carmichael</h1>
 
   </header>
 
