--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ li:last-child {
 
 <p>Ken originates from the UK and currently lives in Australia. He holds a BA (Hons) degree in Law and Management a MSc in Business and a PGCE in ICT, Business and Maths.  He has enhanced  and industry respected academic and practical coaching qualifications having graduated as a Certified Coach from Cambridge University in the UK. He has had an extensive career.  Before setting up his own business as an executive, business and life coach his career has spanned 4 continents and 12 countries and he has held a variety of roles from European politics to management consulting and from School Principal to Government adviser. </p>
 <aside>
-  <img src= "images/KenC.jpg"
+  <img src= "images/KenC.jpg" alt="black and white portrait" width="500" height="300"/>
   
 </aside>
 
