--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 </head>
 
 <style>
-  h1 {text-align: center;}
+  
+  html {
+
+  background-color: antiquewhite;
+  }
+  
+  h1 
+  {background-color: teal;
+  
+  text-align: center;}
  
   ul {
   list-style-type: none;
@@ -30,8 +39,8 @@ li a:hover {
   color: white;
 }
 .active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #4e4caf;
+  color: blue;
 }
 ul {
   border: 1px solid #555;
@@ -45,6 +54,13 @@ li {
 li:last-child {
   border-bottom: none;
 }
+main {background-color: whitesmoke;}
+
+section
+
+.social-link 
+{font-style:normal;
+font-weight: bold;}
 
 </style>
 <body>
@@ -68,15 +84,26 @@ li:last-child {
   </div>
   
   <section>
+   <h1>Overview</h1>
+   <h3>Coaching Experience</h3>
+   
+  <article>
+    Utilizing over 20 years of global business and education sector experience, Ken has been developing and supporting individuals and businesses through coaching.  
+    He encourages people to raise their standards by encouraging them to think and act bigger.  Over the past eight years, he has
+    coached professionals in Education, Business, Marketing and Politics, as well as start up organisations, small business owners and students.
+  </article>
+</section>
 
-    <main>
-        <article>
-          Utilizing over 20 years of global business and education sector experience, since 2012 I have been developing and supporting individuals and businesses through coaching.  I encourage people to raise their standards by encouraging them to think and act bigger.  Over the past eight years, I’ve coached professionals in Education, Business, Marketing and Politics, as well as start up organisations, small business owners and students.
-        </article>
+<section>
 
-  <p></p>
+  <h3>Backgound</h3>
+  
+ <article>
+  Ken originates from the UK and currently lives in Australia. He holds a BA (Hons) degree in Law and Management a MSc in Business and a PGCE in ICT, Business and Maths.  He has enhanced  and industry respected academic and practical coaching qualifications having graduated as a Certified Coach from Cambridge University in the UK. He has had an extensive career.  Before setting up his own business as an executive, business and life coach his career has spanned 4 continents and 12 countries and he has held a variety of roles from European politics to management consulting and from School Principal to Government adviser.
+ </article>
+</section>
 
-<p>Ken originates from the UK and currently lives in Australia. He holds a BA (Hons) degree in Law and Management a MSc in Business and a PGCE in ICT, Business and Maths.  He has enhanced  and industry respected academic and practical coaching qualifications having graduated as a Certified Coach from Cambridge University in the UK. He has had an extensive career.  Before setting up his own business as an executive, business and life coach his career has spanned 4 continents and 12 countries and he has held a variety of roles from European politics to management consulting and from School Principal to Government adviser. </p>
+
 <aside>
   <img src= "images/KenC.jpg" alt="black and white portrait" width="500" height="300"/>
   
@@ -105,13 +132,13 @@ li:last-child {
     LinkedIn
   </a>
    •
-  <a class="social-link" target="_blank" gihref="https://github.com/kjcuk/All-about-Me.git">
+  <a class="social-link" target="_blank" href="https://github.com/kjcuk">
     Github
   </a>
   <br>
-     Made with
-     <span class="heart">&hearts;</span>
-     in Sydney
+     Made in
+     <span class="Hard Work">&RightTeeArrow;</span>
+    Sydney
   </div>
 
 </footer>
