--- a/index.html
+++ b/index.html
@@ -1,77 +1,20 @@
 <html>
 
 <head>
-<title>About Ken</title>
+<title>Ken Carmichael</title>
+<link href="index.css" rel="stylesheet" type="text/css">
 
 </head>
 
-<style>
-  
-  html {
-
-  background-color: antiquewhite;
-  }
-  
-  h1 
-  {background-color: teal;
-  
-  text-align: center;}
- 
-  ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #f1f1f1;
-}
-
-li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-}
 
 
-/* Change the link color on hover */
-li a:hover {
-  background-color: #555;
-  color: white;
-}
-.active {
-  background-color: #4e4caf;
-  color: blue;
-}
-ul {
-  border: 1px solid #555;
-}
-
-li {
-  text-align: center;
-  border-bottom: 1px solid #555;
-}
-
-li:last-child {
-  border-bottom: none;
-}
-main {background-color: whitesmoke;}
-
-section
-
-.social-link 
-{font-style:normal;
-font-weight: bold;}
-
-</style>
-<body>
 
   <header>
 <h1>Ken Carmichael</h1>
 
-  </header>
   
-  <body>
-  <div>
+  
+ 
     <nav>
   
       <ul>
@@ -81,26 +24,27 @@ font-weight: bold;}
     </ul>
     </nav>
 
-  </div>
+  </header>
   
+  <body>
   <section>
-   <h1>Overview</h1>
+   <h2 class="half"> Overview</h2>
    <h3>Coaching Experience</h3>
    
-  <article>
-    Utilizing over 20 years of global business and education sector experience, Ken has been developing and supporting individuals and businesses through coaching.  
+  <p>Utilizing over 20 years of global business and education sector experience, Ken has been developing and supporting individuals and businesses through coaching.  
     He encourages people to raise their standards by encouraging them to think and act bigger.  Over the past eight years, he has
     coached professionals in Education, Business, Marketing and Politics, as well as start up organisations, small business owners and students.
-  </article>
-</section>
-
-<section>
-
+  </p>
+   
+  
   <h3>Backgound</h3>
   
- <article>
-  Ken originates from the UK and currently lives in Australia. He holds a BA (Hons) degree in Law and Management a MSc in Business and a PGCE in ICT, Business and Maths.  He has enhanced  and industry respected academic and practical coaching qualifications having graduated as a Certified Coach from Cambridge University in the UK. He has had an extensive career.  Before setting up his own business as an executive, business and life coach his career has spanned 4 continents and 12 countries and he has held a variety of roles from European politics to management consulting and from School Principal to Government adviser.
- </article>
+<p>  Ken originates from the UK and currently lives in Australia. He holds a BA (Hons) degree in Law and Management a MSc in 
+  Business and a PGCE in ICT, Business and Maths.  He has enhanced  and industry respected academic and practical coaching
+   qualifications having graduated as a Certified Coach from Cambridge University in the UK. He has had an extensive career.  
+   Before setting up his own business as an executive, business and life coach his career has spanned 4 continents and 12 countries and 
+   he has held a variety of roles from European politics to management consulting and from School Principal to Government adviser.</p>>
+
 </section>
 
 
@@ -109,9 +53,6 @@ font-weight: bold;}
   
 </aside>
 
-
-
-</div>
 
 </body>
 
@@ -135,12 +76,10 @@ font-weight: bold;}
   <a class="social-link" target="_blank" href="https://github.com/kjcuk">
     Github
   </a>
-  <br>
-     Made in
-     <span class="Hard Work">&RightTeeArrow;</span>
-    Sydney
-  </div>
 
+ <footer> Made in
+  <span class="Hard Work">&RightTeeArrow;</span>
+ Sydney</footer>>
+    
 </footer>
-</body>
 </html>
