--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -31,28 +32,30 @@
    <h2 class="half"> Overview</h2>
    <h3>Coaching Experience</h3>
    
-  <p>Utilizing over 20 years of global business and education sector experience, Ken has been developing and supporting individuals and businesses through coaching.  
+  <p>
+    Utilizing over 20 years of global business and education sector experience, Ken has been developing and supporting individuals and businesses through coaching.  
     He encourages people to raise their standards by encouraging them to think and act bigger.  Over the past eight years, he has
     coached professionals in Education, Business, Marketing and Politics, as well as start up organisations, small business owners and students.
   </p>
    
   
   <h3>Backgound</h3>
-  
-<p>  Ken originates from the UK and currently lives in Australia. He holds a BA (Hons) degree in Law and Management a MSc in 
-  Business and a PGCE in ICT, Business and Maths.  He has enhanced  and industry respected academic and practical coaching
+
+<p>
+  <img src= "images/KenC.jpg" align="right" alt="black and white portrait" width="500" height="300"/> Ken originates from the UK and currently lives in Australia. He holds a BA (Hons) degree in Law and Management a MSc in 
+  Business and a PGCE in ICT, Business and Maths.  He has enhanced  and industry respected <br> <br>  academic and practical coaching
    qualifications having graduated as a Certified Coach from Cambridge University in the UK. He has had an extensive career.  
-   Before setting up his own business as an executive, business and life coach his career has spanned 4 continents and 12 countries and 
-   he has held a variety of roles from European politics to management consulting and from School Principal to Government adviser.</p>>
+   Before setting up his own business as an executive, business <br><br>and life coach his career has spanned 4 continents and 12 countries and 
+   he has held a variety of roles from European politics to management consulting and from School Principal to Government adviser.</p>
 
 </section>
 
-
-<aside>
-  <img src= "images/KenC.jpg" alt="black and white portrait" width="500" height="300"/>
-  
-</aside>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 </body>
 
@@ -77,9 +80,9 @@
     Github
   </a>
 
- <footer> Made in
+ <footer>Made in
   <span class="Hard Work">&RightTeeArrow;</span>
- Sydney</footer>>
-    
+ Sydney
 </footer>
+
 </html>
