--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
   <section>
    <h2 class="half"> Overview</h2>
    <h3>Coaching Experience</h3>
-   
+   <section class="box">
   <p>
-    Utilizing over 20 years of global business and education sector experience, Ken has been developing and supporting individuals and businesses through coaching.  
-    He encourages people to raise their standards by encouraging them to think and act bigger.  Over the past eight years, he has
+    Utilizing over 20 years of global <b>business and education sector</b> experience, Ken has been <b>developing and supporting</b> individuals and businesses through coaching.  
+    He encourages people to raise their standards by encouraging them to <b>think and act bigger</b>.  Over the past eight years, he has
     coached professionals in Education, Business, Marketing and Politics, as well as start up organisations, small business owners and students.
   </p>
    
   
   <h3>Backgound</h3>
-
+  <section class="box">
 <p>
   <img src= "images/KenC.jpg" align="right" alt="black and white portrait" width="500" height="300"/> Ken originates from the UK and currently lives in Australia. He holds a BA (Hons) degree in Law and Management a MSc in 
   Business and a PGCE in ICT, Business and Maths.  He has enhanced  and industry respected <br> <br>  academic and practical coaching
@@ -50,12 +50,6 @@
 
 </section>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 </body>
 
@@ -80,7 +74,8 @@
     Github
   </a>
 
- <footer>Made in
+ <footer>
+   Made in
   <span class="Hard Work">&RightTeeArrow;</span>
  Sydney
 </footer>
